# fake_shadowsocks

./: CMakeLists.txt  README.md
src/: common.cpp  common.h  config.cpp  config.h  dns_resolve.cpp  dns_resolve.h  event_loop.cpp  event_loop.h  fssocks.cpp  log.hpp  lrucache.cpp  lrucache.h  tcp_relay.cpp  tcp_relay.h  udp_relay.cpp  udp_relay.h
