CMAKE_MINIMUM_REQUIRED(VERSION 2.8)                      
PROJECT(FakeShadowsocks)
SET(INCLUDE_PATH ${PROJECT_SOURCE_DIR}/include)
SET(SOURCE_PATH ${PROJECT_SOURCE_DIR}/src) 
INCLUDE_DIRECTORIES(${INCLUDE_PATH})  
AUX_SOURCE_DIRECTORY(${SOURCE_PATH} SOURCE_FILES)
file(GLOB HEADER_FILES ${SOURCE_PATH}/*.h ${SOURCE_PATH}/*.hpp)

IF (NOT WIN32)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	list(REMOVE_ITEM SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/getopt.c)
	list(REMOVE_ITEM HEADER_FILES ${PROJECT_SOURCE_DIR}/src/getopt.h)
ENDIF () 

ADD_EXECUTABLE(FakeShadowsocks ${SOURCE_FILES} ${HEADER_FILES})

SET_TARGET_PROPERTIES(FakeShadowsocks PROPERTIES OUTPUT_NAME "fssocks")